Update Interactive Plots and Advanced ggplot.Rmd

--- a/Interactive Plots and Advanced ggplot.Rmd
+++ b/Interactive Plots and Advanced ggplot.Rmd
@@ -101,7 +101,9 @@ plot(predict2)
 #### continuous x continuous interaction
 using ggeffects package
 ```{r}
-
+lm3<-lm(penguinsBorn~fishAvailable*temperature, data=penguinData)
+predict3<-ggpredict(lm3, terms=c("fishAvailable", "temperature"))
+plot(predict3)
 ```
 
 
@@ -120,7 +122,9 @@ People make shiny apps in different ways, I'm going to use naming conventions an
 
 But first, we need to load the shiny package. 
 ```{r}
+library(shiny)
 
+# shiny is website that have interactive graphs made with R
 ```
 
 Before we start coding, we need to talk about the different aspects of a shiny app: 
@@ -133,18 +137,21 @@ The **User Interface** creates the webpage, and the **server** tells R how to pu
 Then, **shinyApp** combines the information in the User interface and the Server. We'll start with an example below to get an idea of the structure. 
 
 Just like we started with ggplot, we'll start with a shell. 
-
+```{r}
 ui <- fluidPage()
 server <- function(input, output) {}
 shinyApp(ui = ui, server = server)
+```
 
 I am using ui to stand for the user interface. This is going to be what someone would see. Notice that the server is a function that we are designing, and we're giving it inputs and outputs. In this case, it is an empty function. 
 
 Whatever we put in the fluidpage() function above is going to be present in our shiny app. 
 
+```{r}
 ui <- fluidPage("I LOVE PSY4802!")
 server <- function(input, output) {}
 shinyApp(ui = ui, server = server)
+```
 
 You can see that whatever I write in fluid page, shows up in the app. When we want to add more to what other people will see, we need to specify different inputs and outputs.   
 
@@ -156,15 +163,16 @@ Making graphs is complex. We're going to start with making a scale input because
 All inputs follow similar structures, so you will be able to apply this general format to other options.
 
 The function to make a scale is `sliderInput()` and takes the following inputs: 
-`sliderInput(inputId, label, min, max, value)`
+`sliderInput(inputId, label, value, min, max)`
 
 Just looking at the input code (not in the shiny app), it will look something like this: 
 ```{r}
 sliderInput(inputId="number", label="Pick a number", value=13, min=1, max=100)
+
 ```
 
 When we put it in the ui/server code we used to make the app: 
-
+```{r}
 ui <- fluidPage(
   sliderInput(inputId = "number", 
     label = "Pick a number", 
@@ -172,9 +180,13 @@ ui <- fluidPage(
   plotOutput("hist")
 )
 
+# label is the label people will see
+# value is the location of the dot on a scale of 0-100 when you run the code 
+
 server <- function(input, output) {}
 
 shinyApp(ui = ui, server = server)
+```
 
 This code lets a person using the Shiny app pick a number between 1 and 100. We can then use this to create an output that will change based on people's responses. 
 
@@ -185,21 +197,28 @@ Before we look at the shiny app code, I need to walk you through the code we'll 
 
 first, we'll use rnorm. We can use this function to draw a random sample from a normal distribution (mean= 0, sd=1). 
 ```{r}
+# adding a graph 
 
+set.seed(25)
+rnorm(32)
+
+# it will give us 32 random number 
 ```
 We'll put this into a plot (which will let me show you a way to graph vectors not in a dataframe)
 ```{r}
-
+library(ggplot2)
+ggplot(, aes(rnorm(32))+ geom_histogram())
 ```
 
-
+```{r}
 ui <- fluidPage(
   sliderInput(inputId = "number", 
     label = "Pick a number", 
     value = 13, min = 0, max = 100),
-  plotOutput("hist")
+  plotOutput("hist") # tell shiny to make a histogram 
 )
 
+# make histogram based on info in server 
 server <- function(input, output) {
   output$hist <- renderPlot({
     ggplot(, aes(rnorm(input$number)))+ geom_histogram(fill="darksalmon")+theme_classic()
@@ -207,19 +226,62 @@ server <- function(input, output) {
 }
 
 shinyApp(ui = ui, server = server)
-
+```
 #### Practice (Challenge)
 1. Create a shiny app that allows people to select a number between 1 and 5000. 
 ```{r}
 
+ui <- fluidPage(
+  sliderInput(inputId = "number", 
+    label = "Pick a number", 
+    value = 2500, min = 1, max = 5000)
+)
+
+server <- function(input, output) {}
+
+shinyApp(ui = ui, server = server)
 ```
 
 2. Add an output that creates a graph based on these numbers.
 ```{r}
+ui <- fluidPage(
+  sliderInput(inputId = "number", 
+    label = "Pick a number", 
+    value = 2500, min = 1, max = 5000),
+  plotOutput("hist")
+)
+
+server <- function(input, output) {
+  output$hist <- renderPlot({
+    ggplot(, aes(rnorm(input$number)))+ geom_histogram(fill="midnightblue")+theme_classic()
+  })
+} #to make the boxplot, we have to change geom_histogram() to geom_boxplot()
+
+shinyApp(ui = ui, server = server)
+
+
 
 ```
 **Challenge:** Create a graph based on two numbers chosen by the user
+```{r}
+ui <- fluidPage(
+  sliderInput(inputId = "number1", 
+    label = "Pick a number", 
+    value = 2500, min = 1, max = 5000),
+  plotOutput("scatterplot"), sliderInput(inputId = "number2", 
+    label = "Pick a number", 
+    value = 2500, min = 1, max = 5000),
+  plotOutput("scatterplot")
+)
 
+server <- function(input, output) {
+  output$scatterplot <- renderPlot({
+    ggplot(, aes(rnorm(input$number1, nrom(input$number2))))+ geom_point(color="purple")+theme_classic()
+  })
+}
+
+shinyApp(ui = ui, server = server)
+```
 ### Using real data in a shiny app
 
 For this graph, we're going to use built in R data and allow users to choose what they'd like to graph. To do this, we'll use a dropdown list as the input. (for other inputs: https://shiny.rstudio.com/images/shiny-cheatsheet.pdf)
@@ -235,7 +297,7 @@ data(diamonds)
 The first part we'll set up is the ui. We'll be making a drop down list. 
 
 To make a dropdown list, we'll use the selectInputs function. It takes the following arguments:
-selectInput(inputId, label (what other people see), choices(that people can choose from))
+`selectInput(inputId, label (what other people see), choices(that people can choose from))`
 ```{r}
 ui<- fluidPage(
   titlePanel("diamonds data"),
@@ -258,6 +320,7 @@ shinyApp(ui = ui, server = server)
 ```
 
 ```{r}
+# with two variables 
 ui<- fluidPage(
   titlePanel("diamonds data"),
   sidebarLayout(
